Archive2/d8/64858c86689e50/output
In file included from /usr/local/include/c++/4.9.2/random:49:0,
                 from /usr/local/include/c++/4.9.2/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.2/algorithm:62,
                 from /usr/local/include/boost/move/algorithm.hpp:23,
                 from /usr/local/include/boost/move/move.hpp:24,
                 from /usr/local/include/boost/unordered/detail/util.hpp:20,
                 from /usr/local/include/boost/unordered/detail/buckets.hpp:15,
                 from /usr/local/include/boost/unordered/detail/table.hpp:15,
                 from /usr/local/include/boost/unordered/detail/equivalent.hpp:15,
                 from /usr/local/include/boost/unordered/unordered_set.hpp:18,
                 from /usr/local/include/boost/unordered_set.hpp:17,
                 from /usr/local/include/boost/graph/adjacency_list.hpp:21,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/random.h:106:26: error: expected unqualified-id before '__int128'
       { typedef unsigned __int128 type; };
                          ^
